--- a/package.json
+++ b/package.json
@@ -1,24 +1,28 @@
 {
   "name": "@divriots/csf-simple-book",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "scripts": {
     "serve": "npx wcd-cli@latest serve g25cXg2tW2wEDogWL9dH --open",
     "dev": "vite",
     "build": "node vite-lib-builder.mjs"
   },
   "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
-    "default": "./dist/index.js",
-    "story-file": "./dist/story-file.js",
-    "story-book": "./dist/story-book.js",
-    "story-card": "./dist/story-card.js"
+    ".": "./dist/index.js",
+    "./*": "./dist/*.js"
   },
+  "files": [
+    "dist/*",
+    "src/*"
+  ],
   "dependencies": {
     "@divriots/csf-helpers": "^0.0.11",
     "@storybook/csf": "0.0.2--canary.87bc651.0"
   },
   "devDependencies": {
     "rollup": "^2.77.2",
-    "vite": "^3.0.3"
+    "vite": "^3.0.3",
+    "vite-plugin-dts": "^1.4.0"
   }
 }
